# Ackermann_Steering_Control

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  run_cppcheck.sh  run_cpplint.sh
app/: CMakeLists.txt  controller.cpp  convergence.cpp  fk_goal.cpp  forward_kinematics.cpp  inverse_kinematics.cpp  main.cpp  pbPlots.cpp  pid.cpp  robot.cpp  sensor.cpp  supportLib.cpp
docs/doxygen/: Ackermann_Steering_Control_MT15
doxygen/html/: annotated.html  classController_a0ab87934c4f7a266cfdb86e0f36bc1b5_cgraph.map  classController_a0ab87934c4f7a266cfdb86e0f36bc1b5_cgraph.md5  classController_ab8161275786c47cc70d1ad82f3c476e2_icgraph.map  classController_ac0aa43a79fdc74c7bd75bf383c5b80e0_icgraph.map  classController_ac0aa43a79fdc74c7bd75bf383c5b80e0_icgraph.md5  classConvergence-members.html  classConvergence.html  classConvergence_a7683c2efed8e5526481d361cb28bb6cf_icgraph.map  classConvergence_ab1b92e86a86f779f0b7ff9964f02030a_cgraph.map  classConvergence_ab1b92e86a86f779f0b7ff9964f02030a_cgraph.md5  classForwardKinematics.html  classForwardKinematics_a005d9cbb53f4dbb79b16defb52a8e76a_icgraph.map  classForwardKinematics_a78e9a1bc65b4262f88f0f1f60f2b6368_cgraph.map  classForwardKinematics_a78e9a1bc65b4262f88f0f1f60f2b6368_cgraph.md5  classForwardKinematics_ad4093b156610a520068844c7018a256e_icgraph.md5  classInverseKinematics-members.html  classInverseKinematics_a5b4820979ff3b4b6e0a3346cd472fefe_icgraph.map  classInverseKinematics_a7e72ae559e17363495da967d98fb7985_icgraph.map  classInverseKinematics_a7e72ae559e17363495da967d98fb7985_icgraph.md5  classInverseKinematics_af82fba3aeac080112db67265438bf30c_cgraph.map  classInverseKinematics_af82fba3aeac080112db67265438bf30c_cgraph.md5  classPID-members.html  classPID.html  classPID_ab7d389fc5b88d881bc25f5dafd360441_cgraph.map  classPID_ab7d389fc5b88d881bc25f5dafd360441_cgraph.md5  classPID_acb5ef99f0f57357393fd3556a413afe9_icgraph.map  classPID_acb5ef99f0f57357393fd3556a413afe9_icgraph.md5  classPID_af8c9c5d64221b59cd56ac2543a33eb48_icgraph.md5  classRobot_a31e2ab259ea221e1143141ee7765a8e2_icgraph.md5  classRobot_a3e230967bf4b167aaa20d442c6c5ceb0_icgraph.md5  (+32 more)
include/: ackermann_controller.h  controller.hpp  convergence.hpp  fk_goal.hpp  forward_kinematics.hpp  inverse_kinematics.hpp  pid.h  pid.hpp  robot.h  robot.hpp  sensor.hpp
include/pbPlots/: pbPlots.cpp  supportLib.cpp
results/: cppcheck_result.txt  cpplint_result.txt  valgrind_result.txt
test/: CMakeLists.txt  main.cpp  mockFk.cpp  test.cpp
(+129 files in other folders)
